--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-:root {
-   
-}
 
 .light {
     --main-color-1: #F7F7FF;
@@ -38,6 +35,9 @@ h4, h3 {
     cursor: pointer;
     color: var(--main-color-4);
 }
+p {
+    color: var(--main-color-4);
+}
 input:focus {
     outline: none;
 }
@@ -61,6 +61,7 @@ input[type=radio] {
     width: 1.5rem;
     border-radius: 0.3rem;
     margin-right: 1rem;
+    margin-top: 0.1rem;
 }
 input[type=radio]:checked {
     background-color: var(--main-color-4);
@@ -76,6 +77,11 @@ input[type=submit], button, select, input[type=file] {
     font-weight: 700;
     margin-bottom: 1rem;
 }
+input[type=checkbox] {
+    margin: 0.3rem 1rem 0rem 0.3rem;
+    height: 1.4rem;
+    width: 1.4rem;
+}
 button, select {
     margin-top: 1rem;
     cursor: pointer;
@@ -85,6 +91,9 @@ select {
     background-color: var(--main-color-1);
     color: var(--main-color-4);
     border: 1px solid var(--main-color-4);
+}
+a, input[type=submit]{
+    cursor: pointer;
 }
 label {
     font-size: 1.1rem;
@@ -309,10 +318,13 @@ li {
 .show-input-group {
     max-height: 1000px;
 }
-.radio-collection {
-    padding: 1rem 0 1rem 0;
+.radio-collection{
+    padding: 0.2rem 0.3rem 0rem 0.3rem;
     display: flex;
     flex-direction: column;
+}
+.checkbox-collection > :last-child {
+    margin-top: 1rem;
 }
 .radio-collection > input {
     margin-right: 1rem;
